--- a/Project/GridViewDinamica/src/components/list-filter.css
+++ b/Project/GridViewDinamica/src/components/list-filter.css
@@ -257,3 +257,13 @@
   border-radius: 50%;
   letter-spacing: 0.5px;
 }
+
+:is(.list-filter, .list-editor) .editor-close {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  font-size: 16px;
+  color: #888;
+  cursor: pointer;
+  line-height: 1;
+}
