--- a/Project/GridViewDinamica/src/components/list-filter.css
+++ b/Project/GridViewDinamica/src/components/list-filter.css
@@ -244,6 +244,24 @@
   object-fit: cover;
   border-radius: 50%;
 }
+:is(.list-filter, .list-editor) .user-avatar.user-group {
+  position: relative;
+}
+:is(.list-filter, .list-editor) .user-avatar.user-group .group-badge {
+  position: absolute;
+  bottom: -2px;
+  right: -2px;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background: #fff;
+  border: 1px solid #3A4663;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 10px;
+  color: #3A4663;
+}
 :is(.list-filter, .list-editor) .user-initial {
   width: 100%;
   height: 100%;
@@ -266,4 +284,16 @@
   color: #888;
   cursor: pointer;
   line-height: 1;
+}
+
+/* Agrupamento em seções (Responsibles / Groups) */
+:is(.list-filter, .list-editor) .filter-section-title {
+  padding: 4px 0;
+  color: #444;
+  font-size: 13px;
+  font-weight: 400;
+}
+
+:is(.list-filter, .list-editor) .filter-section {
+  padding-bottom: 4px;
 }
