--- a/Project/GridViewDinamica/src/components/list-filter.css
+++ b/Project/GridViewDinamica/src/components/list-filter.css
@@ -153,7 +153,7 @@
 :is(.list-filter, .list-editor) .filter-item {
   display: flex;
   align-items: center;
-  padding: 6px 0 6px 0;
+  padding: 6px 4px 6px 0;
   font-size: 13px;
   font-family: Roboto, Arial, sans-serif;
   cursor: pointer;
@@ -162,8 +162,6 @@
   transition: background 0.15s;
 }
 
-:is(.list-filter, .list-editor) .filter-item:hover { background: #f6f7fa; }
-:is(.list-filter, .list-editor) .filter-item.selected { background: #f6f7fa; }
 
 :is(.list-filter, .list-editor) .filter-item input[type="checkbox"] {
   width: 16px;
